--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,31 @@ html{
     height:50px;
 }
 
+.success{
+    color: white;
+    background-color: rgb(88, 180, 88);
+    border: 3px solid rgb(63, 133, 63);
+    border-radius: 2px;
+}
+.danger{
+    color: white;
+    background-color: rgb(180, 88, 88);
+    border: 3px solid rgb(133, 63, 63);
+    border-radius: 2px;
+}
+#message{
+    /* display: none; */
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 260px;
+    height: 60px;
+    padding-top: 12px;
+    font-size: 14px;
+    z-index: 999;
+    box-shadow: 0 0 4px 1px rgb(59, 59, 59);
+    text-align: center;
+}
 
 
 /** Header */
